# simplecborrpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  api_gen.py  default_functions.c  default_functions.h  rpc_api.c.jinja2  rpc_api.h.jinja2  simplecborrpc.c  simplecborrpc.h
tests/: main.c  make_api.py
